[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "python-socketio>=5.12.1",
    "requests>=2.32.3",
    "streamlit>=1.42.0",
    "twilio>=9.4.5",
    "websocket-client>=1.8.0",
    "yfinance>=0.2.52",
]
